Fix index out of bounds error for $next-breakpoint

--- a/src/grid/_hidden.scss
+++ b/src/grid/_hidden.scss
@@ -2,15 +2,18 @@
 	@for $i from 1 through length($col-sizes) {
 		$size: nth($col-sizes, $i);
 		$breakpoint: nth($col-breakpoints, $i);
-		$next-breakpoint: nth($col-breakpoints, $i + 1) - 1;
 
 		&-#{$size} {
 			@if $i == 1 {
+				$next-breakpoint: nth($col-breakpoints, $i + 1) - 1;
+
 				@media all and (max-width: $next-breakpoint) {
 					display: none;
 				}
 			}
 			@else if $i < length($col-sizes) {
+				$next-breakpoint: nth($col-breakpoints, $i + 1) - 1;
+
 				@media all and (min-width: $breakpoint) and (max-width: $next-breakpoint) {
 					display: none;
 				}
